fixed clearAll out of bounds display

--- a/style.css
+++ b/style.css
@@ -1,11 +1,3 @@
-#inputArea {
-    margin-bottom: 20px;
-}
-
-#inputArea input {
-    margin-right: 10px;
-}
-
 .result-item {
     border: 1px solid #ccc;
     padding: 10px;
@@ -13,17 +5,13 @@
     background-color: #f9f9f9;
 }
 
-.error-message {
-    color: red;
-    margin-top: 10px;
-}
 
 .container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    max-width: 100%;
+    max-width: 50%;
 }
 
 h1,
@@ -34,20 +22,20 @@ h2 {
 .input-form {
     display: flex;
     flex-direction: column;
-    max-width: 100%;
+    width: 100%;
 }
 
 #dimension1,
 #dimension2,
 #quantity {
-    width: 300px;
+    width: 100%;
 }
 
 .history {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 600px;
+    width: 100%;
 }
 
 ul {
@@ -68,7 +56,10 @@ ul>li {
 
 
 body {
-    max-width: 1100px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    width: 100%;
     max-height: 100vh;
     margin: 0 auto;
 }
